--- a/roles/configure_md_raid/templates/mdcheck_template_timer.timer.j2
+++ b/roles/configure_md_raid/templates/mdcheck_template_timer.timer.j2
@@ -1,8 +1,8 @@
 [Unit]
-Description=Initiates array check on {{ md_device }}
+Description=Initiates array check on {{ item.device }}
 
 [Timer]
-OnCalendar={{ check_frequency }}
+OnCalendar={{ item.frequency }}
 Persistent=true
 
 [Install]
