--- a/roles/configure_md_raid/templates/mdcheck_template_start.service.j2
+++ b/roles/configure_md_raid/templates/mdcheck_template_start.service.j2
@@ -1,12 +1,12 @@
 [Unit]
-Description=Triggers array check operation on {{ md_device }}
+Description=Triggers array check operation on {{ item.device }}
 Wants=mdcheck_continue.timer
 Documentation=man:mdadm(8)
 
 [Service]
 Type=oneshot
 Environment="MDADM_CHECK_DURATION=8 hours"
-ExecStart={{ scripts_dir }}/mdcheck --duration ${MDADM_CHECK_DURATION} --device /dev/{{ md_device }}
+ExecStart={{ scripts_dir }}/mdcheck --duration ${MDADM_CHECK_DURATION} --device /dev/{{ item.device }}
 
 [Install]
 WantedBy=multi-user.target
