--- a/roles/configure_iptables/templates/iptables-setup.sh.j2
+++ b/roles/configure_iptables/templates/iptables-setup.sh.j2
@@ -37,11 +37,8 @@ function iptables_add_default_rules(){
         iptables -t filter -A DOCKER-USER -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
     fi
 
-    # allow hosts to find the nebula endpoint
-    # iptables -A INPUT -s {{ lan_range_cidr }} -p udp --dport {{ nebula_port }} -j ACCEPT
-
-    # allow nebula protected traffic to be received
-    # iptables -A INPUT -s {{ nebula_range_cidr }} -j ACCEPT
+    # allow administrative access on local network
+    iptables -A INPUT -s {{ lan_range_cidr }} -p tcp --dport {{ ssh_port_v }} -j ACCEPT
 
     # enable dns resolution with local resolver
     iptables -A INPUT -s 127.0.0.0/24 -p udp --sport 53 -j ACCEPT
