Added rclone configuration support and borg refactor
RClone operates on the use of a configuration that maintains targets for
an environment. This target list maintains access tokens as well. Updated
logic to add support for creating that configuration within the system.

--- a/roles/configure_nextcloud/templates/backup-nextcloud-mariadb.sh.j2
+++ b/roles/configure_nextcloud/templates/backup-nextcloud-mariadb.sh.j2
@@ -5,7 +5,7 @@ CONTAINER_NAME="mariadb"
 DB_USER="root"
 DB_PASSWORD="{{ nextcloud_db_root_password }}"
 DB_NAME="nextcloud"
-BACKUP_DIR="{{ data_dir }}/mariadb"
+BACKUP_DIR="{{ data_dir }}/nextcloud"
 TIMESTAMP=$(date +"%F_%T")
 BACKUP_FILE="$BACKUP_DIR/$DB_NAME-$TIMESTAMP.sql"
 LOG_FILE="/var/log/mariadb_backup.log"
