--- a/roles/configure_iptables/templates/iptables-setup.sh.j2
+++ b/roles/configure_iptables/templates/iptables-setup.sh.j2
@@ -39,12 +39,13 @@ function iptables_add_default_rules(){
 
     # allow administrative access on local network
     iptables -A INPUT -s {{ lan_range_cidr }} -p tcp --dport {{ ssh_port_v }} -j ACCEPT
+    
+    # allow wireguard connections for administrative access
+    iptables -A INPUT -s {{ lan_range_cidr }} -p tcp --dport 51820 -j ACCEPT
+    iptables -A INPUT -s 10.0.0.0/24 -j ACCEPT
 
     # enable dns resolution with local resolver
-    iptables -A INPUT -s 127.0.0.0/24 -p udp --sport 53 -j ACCEPT
-    iptables -A INPUT -s 127.0.0.0/24 -p udp --dport 53 -j ACCEPT
-    iptables -A INPUT -s 127.0.0.0/24 -p tcp --sport 53 -j ACCEPT
-    iptables -A INPUT -s 127.0.0.0/24 -p tcp --dport 53 -j ACCEPT
+    iptables -A INPUT -s 127.0.0.0/24 -j ACCEPT
 
     # adjust default policies
     iptables -P INPUT DROP
