Added tailscale installation support within hosts

--- a/roles/configure_nextcloud/templates/docker-env-template.j2
+++ b/roles/configure_nextcloud/templates/docker-env-template.j2
@@ -17,3 +17,4 @@ MYSQL_PASSWORD={{ nextcloud_db_user_password }}
 MYSQL_ROOT_PASSWORD={{ nextcloud_db_root_password }}
 
 NEBULA_IP={{ nebula_ip }}
+TAILSCALE_IP={{ system_tailscale_ip }}
