--- a/roles/configure_pihole/templates/docker-env-template.j2
+++ b/roles/configure_pihole/templates/docker-env-template.j2
@@ -7,3 +7,4 @@ WEBPASSWORD={{ pihole_admin_password }}
 WIREGUARD_IP={{ wireguard_ip }}
 
 NEBULA_IP={{ nebula_ip }}
+TAILSCALE_IP={{ system_tailscale_ip }}
