--- a/roles/configure_vaultwarden/templates/docker-env-template.j2
+++ b/roles/configure_vaultwarden/templates/docker-env-template.j2
@@ -22,3 +22,4 @@ LOGIN_RATELIMIT_MAX_BURST=10
 ADMIN_TOKEN='{{ vaultwarden_admin_token }}'
 
 NEBULA_IP={{ nebula_ip }}
+TAILSCALE_IP={{ system_tailscale_ip }}
