Added support for WIreguard private key injection

--- a/roles/configure_wireguard/templates/wireguard.conf.j2
+++ b/roles/configure_wireguard/templates/wireguard.conf.j2
@@ -1,5 +1,5 @@
 [Interface]
-PrivateKey = {{ wg_private_key.stdout }}
+PrivateKey = {{ wireguard_private }}
 Address = {{ wireguard_ip }}/24
 ListenPort = {{ wg_port }}
 
