--- a/roles/configure_nextcloud/templates/docker-env-template.j2
+++ b/roles/configure_nextcloud/templates/docker-env-template.j2
@@ -5,10 +5,10 @@ DATA_DIR={{ data_dir }}
 NEXTCLOUD_DOMAIN={{ svc_domain }}
 NEXTCLOUD_TRUSTED_DOMAINS={{ svc_domain }}
 NEXTCLOUD_ADMIN_USER={{ nextcloud_admin_user }}
-NEXTCLOUD_ADMIN_PASSWORD={{ nextcloud_admin_user_password }}
+NEXTCLOUD_ADMIN_PASSWORD='{{ nextcloud_admin_user_password }}'
 
-NEXTCLOUD_TLS_CERT_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/fullchain1.pem"
-NEXTCLOUD_TLS_KEY_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/privkey1.pem"
+NEXTCLOUD_TLS_CERT_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/fullchain.pem"
+NEXTCLOUD_TLS_KEY_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/privkey.pem"
 
 # MariaDB
 MYSQL_HOST=localhost:3306
