Migrated Nebula to inject keys and fixed lighthouse support

--- a/roles/configure_nebula/templates/nebula-lighthouse-config.j2
+++ b/roles/configure_nebula/templates/nebula-lighthouse-config.j2
@@ -173,6 +173,6 @@ firewall:
       group: acl:admin
 
     - port: {{ nebula_port }}
-      proto: tcp
-      ca_sha: {{ ca_sha }}
+      proto: udp
+      ca_sha: {{ nebula_ca_sha_v }}
 
