--- a/roles/configure_iptables/templates/iptables-setup.sh.j2
+++ b/roles/configure_iptables/templates/iptables-setup.sh.j2
@@ -44,6 +44,10 @@ function iptables_add_default_rules(){
     iptables -A INPUT -s {{ lan_range_cidr }} -p udp --dport 51820 -j ACCEPT
     iptables -A INPUT -s 10.0.0.0/24 -j ACCEPT
 
+    # allow nebula connections for administrative access
+    iptables -A INPUT -s {{ lan_range_cidr }} -p udp --dport {{ nebula_port_v }} -j ACCEPT
+    iptables -A INPUT -s {{ nebula_range_cidr_v }} -j ACCEPT
+
     # enable dns resolution with local resolver
     iptables -A INPUT -s 127.0.0.0/24 -j ACCEPT
 
