Added support for nebula_ip and moved jellyfin to sidecar

--- a/roles/configure_nextcloud/templates/docker-env-template.j2
+++ b/roles/configure_nextcloud/templates/docker-env-template.j2
@@ -15,3 +15,5 @@ MYSQL_HOST=localhost:3306
 MYSQL_USER={{ nextcloud_db_user }}
 MYSQL_PASSWORD={{ nextcloud_db_user_password }}
 MYSQL_ROOT_PASSWORD={{ nextcloud_db_root_password }}
+
+NEBULA_IP={{ nebula_ip }}
