--- a/roles/configure_pihole/templates/docker-env-template.j2
+++ b/roles/configure_pihole/templates/docker-env-template.j2
@@ -5,3 +5,5 @@ DATA_DIR={{ data_dir }}
 CERTS_DIR={{ certs_dir }}
 WEBPASSWORD={{ pihole_admin_password }}
 WIREGUARD_IP={{ wireguard_ip }}
+
+NEBULA_IP={{ nebula_ip }}
