--- a/roles/configure_vaultwarden/templates/docker-env-template.j2
+++ b/roles/configure_vaultwarden/templates/docker-env-template.j2
@@ -20,3 +20,5 @@ LOGIN_RATELIMIT_MAX_BURST=10
 # ADMIN_TOKEN='$argon2id$v=19$m=65540,t=3,p=4$MmeKRnGK5RW5mJS7h3TOL89GrpLPXJPAtTK8FTqj9HM$DqsstvoSAETl9YhnsXbf43WeaUwJC6JhViIvuPoig78'
 ## Old plain text string (Will generate warnings in favor of Argon2)
 ADMIN_TOKEN='{{ vaultwarden_admin_token }}'
+
+NEBULA_IP={{ nebula_ip }}
