Added support for LAN and WAN lighthouse nodes to support redundancy

--- a/roles/configure_nebula/templates/nebula-lighthouse-config.j2
+++ b/roles/configure_nebula/templates/nebula-lighthouse-config.j2
@@ -81,7 +81,7 @@ relay:
 tun:
 
   # When tun is disabled, a lighthouse can be started without a local tun interface (and therefore without root)
-  disabled: true
+  disabled: false
 
   # Name of the device. If not set, a default will be chosen by the OS.
   # For macOS: if set, must be in the form `utun[0-9]+`.
