--- a/roles/configure_pihole/templates/docker-env-template.j2
+++ b/roles/configure_pihole/templates/docker-env-template.j2
@@ -4,7 +4,7 @@ DATA_DIR={{ data_dir }}
 # PiHole
 CERTS_DIR={{ certs_dir }}
 WEBPASSWORD={{ pihole_admin_password }}
-WIREGUARD_IP={{ wireguard_ip }}
+WIREGUARD_IP=
 
 NEBULA_IP={{ nebula_ip }}
-TAILSCALE_IP={{ system_tailscale_ip }}
+TAILSCALE_IP=
