Removing tailscale from services

--- a/roles/configure_code/templates/docker-env-template.j2
+++ b/roles/configure_code/templates/docker-env-template.j2
@@ -5,4 +5,4 @@ CODE_TLS_CERT_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/fullchain.pem"
 CODE_TLS_KEY_LOCATION="{{ lets_encrypt_dir }}/{{ svc_domain }}/privkey.pem"
 
 PASSWORD={{ code_password }}
-TAILSCALE_IP={{ system_tailscale_ip }}
+NEBULA_IP={{ nebula_ip }}
