--- a/roles/configure_jellyfin/templates/docker-env-template.j2
+++ b/roles/configure_jellyfin/templates/docker-env-template.j2
@@ -1,4 +1,3 @@
 # Common
 DATA_DIR={{ data_dir }}
-TAILSCALE_AUTH_KEY={{ TAILSCALE_AUTH_KEY }}
-TAILSCALE_IP={{ system_tailscale_ip }}
+NEBULA_IP={{ nebula_ip }}
